--- a/src/styles/components/_Workbench.scss
+++ b/src/styles/components/_Workbench.scss
@@ -14,6 +14,7 @@
   }
 
   .WorkbenchContainer--Bottom {
+    text-align: center;
     height: 50%;
     border: 1px solid $color-black;
   }
